$Id$

2008-08-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint get-iab get-oui: Replaced "#!/usr/bin/perl" shebang
	  with "#!/usr/bin/env perl" to increase portability.  This allows
	  these perl scripts to work on systems where perl is not installed in
	  /usr/bin, such as NetBSD.

2008-07-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version to 1.7.1.

	* arp-fingerprint: Added NetBSD 4.0, FreeBSD 7.0 and Vista SP1

2008-07-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released arp-scan version 1.7.
	  tarball arp-scan-1.7.tar.gz, size 344,771 bytes
	  md5sum a9927dba2b1dbdfd1c3b3bb09615fc14

2008-07-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

	* configure.ac: Incremented version to 1.7.

2008-07-11 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.a: Removed reference to RMIF environment variable.
	  arp-scan now uses the value specified with --interface, or
	  if that is not specified, picks an interface with
	  pcap_lookupdev().

	* configure.ac: Incremented version to 1.6.4 for pre-release
	  testing.

	* *.c, *.h: Modified copyright statements to read 2005-2008.

2008-05-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Added --pcapsavefile (-W) option to allow received
	  ARP responses to be saved in the specified pcap savefile for
	  later analysis.

	* TODO: Removed plan to support libpcap 0.7 as just about every
	  system has at least libpcap 0.8, and most have 0.9.

	* arp-scan.c: changed display_packet() so it displays the source
	  address from the frame header in parens if it is different from the
	  ar$sha address.  E.g.
          192.168.1.255 ff:ff:ff:ff:ff:ff (00:03:a0:88:eb:a8)   Broadcast

2007-12-10 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Change most calls to strtol() to use the new
          wrapper function Strtol() instead, because this checks for